--- a/materialdiscord.theme.css
+++ b/materialdiscord.theme.css
@@ -1,8 +1,8 @@
 /**
  * @name Material Discord
- * @version 3.0.5
- * @description A theme based on Google's Material Design
- * @author CapnKitten
+ * @version 1
+ * @description google material 3 expressive ts
+ * @author CapnKitten, tureGPT
  *
  * @website http://github.com/CapnKitten
  * @source https://github.com/CapnKitten/BetterDiscord/blob/master/Themes/Material-Discord/css/source.css
