Update and rename materialdiscord.theme.css to material3discord.theme.css

--- a/material3discord.theme.css
+++ b/material3discord.theme.css
@@ -1,7 +1,7 @@
 /**
- * @name Material Discord
+ * @name Material Discord e
  * @version 3.0.5
- * @description A theme based on Google's Material Design
+ * @description material 3 expressive
  * @author CapnKitten
  *
  * @website http://github.com/CapnKitten
